# src/main/java/com/alia/back_end_service/api_rest/bot/BotApiDelegateImpl.java
@@ -12,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -42,6 +43,11 @@ public class BotApiDelegateImpl implements BotApiDelegate {
 
     @Override
     public ResponseEntity<Void> botPost(BotDTO botDTO) {
-        return BotApiDelegate.super.botPost(botDTO);
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+
+        Bot bot = botMapperPortAPI.toDomainRegister(botDTO);
+        bot.setUserId(username);
+        botRegistrationPortAPI.registerBot(bot); // No he puesto devolver el bot porque no lo han definido los compañeros :)
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 }
