# src/main/java/com/alia/back_end_service/domain/user/ports/UserLoginPortAPI.java
@@ -1,6 +1,8 @@
 package com.alia.back_end_service.domain.user.ports;
 
 
+import com.alia.back_end_service.domain.user.User;
+
 public interface UserLoginPortAPI {
-    String login(String username, String password);
+    String login(User user);
 }
