# src/main/resources/openapi.yaml
@@ -501,10 +501,10 @@ components:
     UserDTOLogin:
       type: object
       required:
-        - username
+        - user
         - password
       properties:
-        username:
+        user:
           type: string
           example: 'user123'
         password:
@@ -514,14 +514,14 @@ components:
     UserDTORegister:
       type: object
       required:
-        - username
-        - email
+        - user
+        - mail
         - password
       properties:
-        username:
+        user:
           type: string
           example: 'newuser123'
-        email:
+        mail:
           type: string
           format: email
           pattern: "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"
@@ -535,7 +535,7 @@ components:
       type: object
       required:
         - name
-        - description
+        - descripcion
         - urlImagen
         - endpoint
       properties:
@@ -546,7 +546,7 @@ components:
         name:
           type: string
           example: "MyBot"
-        description:
+        descripcion:
           type: string
           example: "An AI-powered chatbot that responds to user queries."
         urlImagen:
@@ -571,9 +571,9 @@ components:
       properties:
         name:
           type: string
-        time_match:
+        matchTime:
           type: integer
-        number_match:
+        rounds:
           type: integer
         bots:
           type: array
